[package]
name = "msquic-echo-rs"
version = "0.1.0"
rust-version = "1.92"
edition = "2021"

# [patch.crates-io]
# msquic = { path = "vendor/msquic" }

[dependencies]
msquic = { version = "2.5.1-beta", default-features = false, features = ["find"]}
futures = { version = "0.3", default-features = false, features = ["std"]}
bytes = "1"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "fmt"] }
tokio = {version = "1.48.0", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "signal"] }
